feat(codespaces.yml): added GitHub Codespaces configuration